# SkinFlaps

./: .gitignore  LICENSE  README.md  appveyor.yaml  libPaths.props  libPathsCourt.props  libPathsQisi.props
History/: AbbeEstlanderLip.hst  AntiaBuch_ear.hst  Cutting.hst  F2.hst  F3.hst  F4.hst  Fisher.hst  Furlow.hst  FurlowPalateRepair.hst  Millard_II.hst  Murawski.hst  QisiLevelsetProblem.hst  RoseThompson.hst  RoseThompsonUnequal.hst  TenzelEyelid.hst  better_junk.hst  cervicoFacialFlap.hst  cheekSplasty.hst  cleft_CuttingRepair.hst  cleft_FisherRepair.hst  cleft_RoseThompson.hst  cleft_TennisonRandall.hst  desimatedcube.hst  foreheadFlapToNose.hst  lateralCutting.hst  lateralMillard.hst  lateralMirYMir.hst  lateralNoordhoff.hst  lateralTse.hst  lipAdhesionCutting.hst  lowerEyelidCanthotomy.hst  postAuricularEar.hst  scalpDoubleRotation.hst  unilatCleft_Cutting.hst
Model/: FacialFlaps.smd  FacialFlaps_noTeethEyes.smd  Incomplete.bed  Incomplete.smd  PalateUnilat.bed  PalateUnilat.mtl  PalateUnilat.smd  TurboSquid_license.docx  WholeFace.smd  WholeFace_NasalCartilage_NoStatics.smd  book.smd  cleftBag2_9_1_20.bed  cleftBag2_9_1_20.mtl  cleftBag_9_1_20.bed  cleft_flap.smd  cube.smd  cutCube.smd  cutSphere.smd  deepCutHoleTest.bed  deepCutHoleTest.smd  deepCutTest.bed  deepCutTest.smd  lateralNasalWall.bed  lateralNasalWall.smd  lateralNasalWall_6_4_20.bed  mtFragmentShader.txt  mtVertexShader.txt  sphere.smd  teeth.smd  tightSleeve.mtl  tightSleeve.smd  unilatCleftLip.smd  unilatCleftLip_Incomplete.smd  unilatCleftLip_complete.smd  unilatCompleteCleft.bed  unilatCompleteCleft_orig.bed  (+3 more)
PDTetPhysics/: CMakeLists.txt  PDTetPhysics.sln  PDTetPhysics.vcxproj  PDTetPhysics.vcxproj.filters  PDTetPhysics_noCuda.sln  PDTetPhysics_noCuda.vcxproj
PDTetPhysics/PDDeformer/include/: Add_Force.h  Algebra.h  CudaSolver.h  CudaWrapper.h  Discretization.h  Geometry.h  GridDeformerTet.h  Iterator.h  MKLWrapper.h  Map.h  PDConstraints.h  PardisoWrapper.h  ReshapeDataStructure.h  SchurSolver.h  SimulationFlags.h  dumper.h
PDTetPhysics/PDDeformer/src/: Add_Force.cpp  CudaSolver.cpp  GridDeformerTet.cpp  PardisoWrapper.cpp  ReshapeDataStructure.cpp  SchurSolver.cpp
PDTetPhysics/cmake/: FindIOMP.cmake  FindMKL.cmake  README.txt
PDTetPhysics/include/: MergedLevelSet.h  PDTetSolver.h  Utilities.h  pdTetPhysics.h
PDTetPhysics/src/: MergedLevelSet.cpp  PDTetSolver.cpp  SchurSolver.cpp
gl3wGraphics/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  GLmatrices.cpp  GLmatrices.h  Mat2x2d.h  Mat2x2f.h  Mat3x3d.h  Mat3x3f.h  Vec2d.h  Vec2f.h  Vec3d.h  Vec3f.h  boundingBox.h  clockwise.h  closestPointOnTriangle.h  gl3wGraphics.cpp  gl3wGraphics.h  gl3wGraphics.sln  gl3wGraphics.vcxproj  gl3wGraphics.vcxproj.filters  insidePolygon.h  lightsShaders.cpp  lightsShaders.h  lines.cpp  lines.h  materialTriangles.cpp  materialTriangles.h  materialTriangles_old.h  math3d.h  sceneNode.cpp  sceneNode.h  shapes.cpp  shapes.h  staticTriangle.cpp  staticTriangle.h  surgGraphics.cpp  surgGraphics.h  textures.cpp  textures.h  (+2 more)
imgui_glfw_nfd_lib/: CMakeLists.txt  ImGuiFileDialog.h  imgui_demo.cpp  imgui_glfw_nfd_lib.sln  imgui_glfw_nfd_lib.vcxproj  imgui_glfw_nfd_lib.vcxproj.xml
imgui_glfw_nfd_lib/cmake/: FindGLFW3.cmake
imgui_glfw_nfd_lib/extLibs/glfw/lib-vc2022_old/: glfw3.lib
simd-numeric-kernels-new/: CMakeLists.txt  LICENSE  Makefile.SetupMacros  simd-numeric-kernels.sln  simd-numeric-kernels.vcxproj  simd-numeric-kernels.vcxproj.filters
simd-numeric-kernels-new/Common/: Constants.h  Discrete.h  KernelCommon.h  Mask.Scalar.h  Mask.h  Number.Scalar.h  Number.h  NumberPolicy.h  Vector3.h
simd-numeric-kernels-new/Common/arch/: SIMDArchitectureScalar.h
simd-numeric-kernels-new/Common/arch/x86_64/: Discrete.AVX2.h  Discrete.AVX512.h  Mask.AVX2.h  Mask.AVX512.h  Number.AVX2.h  Number.AVX512.h  SIMDArchitectureAVX2.h  SIMDArchitectureAVX512.h
simd-numeric-kernels-new/Kernels/Matrix_Times_Matrix/: Matrix_Times_Matrix.cpp  Matrix_Times_Matrix.h
simd-numeric-kernels-new/Kernels/Matrix_Times_Transpose/: Matrix_Times_Transpose.cpp  Matrix_Times_Transpose.h
simd-numeric-kernels-new/Kernels/Singular_Value_Decomposition/: Singular_Value_Decomposition.cpp  Singular_Value_Decomposition.h  Singular_Value_Decomposition_Givens_QR_Factorization_Kernel.hpp  Singular_Value_Decomposition_Jacobi_Conjugation_Kernel.hpp  Singular_Value_Decomposition_Kernel_Declarations.hpp  Singular_Value_Decomposition_Main_Kernel_Body.hpp
simd-numeric-kernels-new/References/Matrix_Times_Matrix/: Matrix_Times_Matrix_Reference.cpp  Matrix_Times_Matrix_Reference.h
simd-numeric-kernels-new/References/Matrix_Times_Transpose/: Matrix_Times_Transpose_Reference.cpp  Matrix_Times_Transpose_Reference.h
simd-numeric-kernels-new/References/Singular_Value_Decomposition/: Singular_Value_Decomposition_Reference.cpp  Singular_Value_Decomposition_Reference.h
simd-numeric-kernels-new/TestDeps/: Kernel_Serial_Base_Helper.h
simd-numeric-kernels-new/Tests/: CMakeLists.txt
simd-numeric-kernels-new/Tests/Matrix_Times_Matrix/: CMakeLists.txt  SIMDTest.cpp  StreamTest.cpp  ThreadTest.cpp  UnitTest.cpp
simd-numeric-kernels-new/Tests/Matrix_Times_Transpose/: CMakeLists.txt  SIMDTest.cpp  StreamTest.cpp  ThreadTest.cpp  UnitTest.cpp
simd-numeric-kernels-new/Tests/Singular_Value_Decomposition/: CMakeLists.txt  SIMDTest.cpp  StreamTest.cpp  ThreadTest.cpp  UnitTest.cpp
(+161 files in other folders)
